--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -236,6 +236,27 @@ hr.small {
     pointer-events: none;
 }
 
+video {
+  width: 100%;
+  height: auto;
+}
+
+.resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+	margin-left:2%;
+}
+
 /* Footer */
 
 footer {
