--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -9,7 +9,7 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 body {
@@ -68,10 +68,12 @@ hr.small {
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    right: 0;
+    /* right: 0; */
+	left: 0;
     width: 250px;
     height: 100%;
-    transform: translateX(250px);
+    /* transform: translateX(250px); */
+	transform: translateX(-250px);
     overflow-y: auto;
     background: #222;
     -webkit-transition: all 0.4s ease 0s;
@@ -129,13 +131,15 @@ hr.small {
 
 #menu-toggle {
     z-index: 1;
+	/* position: absolute; */
     position: fixed;
-    top: 0;
-    right: 0;
+    /* top: 0; */
+    /* right: 0; */
 }
 
 #sidebar-wrapper.active {
-    right: 250px;
+    /* right: 250px; */
+	left: 250px;
     width: 250px;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
@@ -154,7 +158,7 @@ hr.small {
     display: table;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 600px;
     background: url(../img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -165,13 +169,13 @@ hr.small {
 /* About */
 
 .about {
-    padding: 50px 0;
+    /* padding: 50px 0; */
 }
 
 /* Services */
 
 .services {
-    padding: 50px 0;
+    /* padding: 50px 0; */
 }
 
 .service-item {
@@ -195,7 +199,7 @@ hr.small {
 /* Portfolio */
 
 .portfolio {
-    padding: 50px 0;
+    /* padding: 50px 0; */
 }
 
 .portfolio-item {
@@ -213,7 +217,7 @@ hr.small {
 /* Call to Action */
 
 .call-to-action {
-    padding: 50px 0;
+    /* padding: 50px 0; */
 }
 
 .call-to-action .btn {
@@ -245,6 +249,10 @@ video {
     position: relative;
     overflow: hidden;
     padding-top: 56.25%;
+	width:90%;
+	height:auto;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .resp-iframe {
@@ -260,7 +268,7 @@ video {
 /* Footer */
 
 footer {
-    padding: 100px 0;
+    /*padding: 100px 0;*/
 }
 
 #to-top {
